# Racer

./: README.md  Racer.aps  Racer.rc  Racer.sln  TheKineticianEngin.vcxproj  TheKineticianEngin.vcxproj.filters  meson.build  resource.h  settings.ini
Media/: Thumbs.db
source/: main.cpp  projectloop.h  projectsetup.h  settings.h
source/generic/: 3dfunctions.h  bresenham.h  dirlist.h  filesystem.h  generic.h  genericmath.h  genericsettings.h  initvideo.h  input.h  loadbmp.h  loadms3d.h  msviewer.h  normals.h  readinifiles.h  refreshscreen.h  spherebumpmesh.h
source/generic/dashboard/: dashbars.h  dashbutton.h  dashcursor.h  dashloop.h  dashmenu.h  dashonoff.h  dashsetup.h  dashtext.h  dashtime.h
source/generic/msViewer2/: mathlib.h
source/generic/opengl/: loadtexture.h
source/generic/sdldraw/: drawhexagon.h  drawline.h  drawpolygon.h  loadanddrawsurfaces.h  rotoscale.h  savesurface.h
source/include/: SDL_opengl.h
source/projectspecific/: bumpintoworld.h  drawhud.h  drawworld.h  play.h  text.h  textures.h
source/projectspecific/meshes/: track.h  trackturnl.h  trackturnr.h
